--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
   <div id="wrapper">
     <iframe 
       id="myframe" 
-      src="http://yinwu.lyzxwh.cn/html/intostack/new_login.html"
+      src="https://yinwu.lyzxwh.cn/html/intostack/new_login.html"
       sandbox="allow-same-origin allow-scripts allow-forms allow-popups allow-popups-to-escape-sandbox"
     ></iframe>
   </div>
   <script>
-    const TARGET_URL = "http://yinwu.lyzxwh.cn/html/intostack/new_login.html";
+    const TARGET_URL = "https://yinwu.lyzxwh.cn/html/intostack/new_login.html";
     
     function adjustScale() {
       const frame = document.getElementById('myframe');
